eks-cluster-w-alb/infrastructure/1-vpc.tf
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"

  enable_dns_hostnames = true

  tags = {
    "project"     = var.project
    "sub-project" = var.sub-project
    "Name"        = "main"
  }
}
